# horus.ai-main

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  setup.js  tailwind.config.js  vite.config.js  vitest.config.js
.claude/: settings.json
.claude/commands/: mvp.md  start.md  strategy.md
apps/api/: .dockerignore  config.py  dependencies.py  fly.toml  main.py  requirements.txt
apps/api/models/: score.py  target.py
apps/api/routers/: billing.py  chat.py  clusters.py  enrichment.py  exports.py  network.py  officer_network.py  pipeline.py  (+4 more)
apps/web/: package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json
backend/: models.py  server.py
design-system/horusai/: MASTER.md
docs/00_project/: 01_overview.md
frontend/: App.jsx
supabase/: config.toml  seed.sql
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_scores_unique_constraint.sql  004_pipeline_rls.sql  005_accent_insensitive_search.sql  006_auth_hooks.sql  007_stripe_customer.sql  008_target_coordinates.sql  009_rollup_scenarios.sql  010_rollup_rls_fix.sql  011_scenario_results.sql  012_network_edges.sql  013_enrichment.sql  014_gleif_columns.sql  015_web_enrichment_columns.sql  016_officer_network.sql
tests/: conftest.py
tests/network/: conftest.py  test_network_api.py  test_network_service.py
tests/phase1/: app.test.jsx  test_server.py
tests/rollup/: computeFinancials.test.ts  conftest.py  test_rollup_api.py  test_rollup_service.py
tests/scenarios/: conftest.py  test_scenario_api.py  test_scenario_service.py
(+79 files in other folders)
